before combining all receipts

--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -256,7 +256,7 @@
   background-color: orange;
   color: white;
 }
-.status-label.completed {
+.status-label.confirmed {
   background-color: green;
   color: white;
 }
